# g0v0-plugins

./: .gitignore  README.md
auto_dailychallenge/: README.md  __init__.py  plugin.json
banchopy_api/: README.md  __init__.py  models.py  plugin.json  utils.py
banchopy_api/migrations/versions/: 2026-02-19_605cc2384810_init.py
beatmap_policy/: README.md  __init__.py  calculator.py  config.py  models.py  plugin.json  pyproject.toml
beatmap_policy/migrations/versions/: 2026-02-19_3255fe86b9cb_init_migrate_from_g0v0_server.py
mailersend/: README.md  __init__.py  plugin.json  pyproject.toml
