[project]
name = "g0v0-plugin-beatmap-policy"
version = "0.1.0"
description = "A plugin that supports beatmap ranking policies and management. (allowlist, blacklist, etc.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osupyparser",
]

[tool.uv.sources]
osupyparser = { git = "https://github.com/MingxuanGame/osupyparser.git" }
